--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>timepedia</groupId>
+    <groupId>org.timepedia.exporter</groupId>
     <artifactId>gwtexporter</artifactId>
     <packaging>jar</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.01</version>
     <name>GWT Javascript API Exporter</name>
     <url>http://timepedia.org</url>
     <dependencies>
@@ -29,7 +29,7 @@
             <artifactId>gwt-dev-${gwtplatform}</artifactId>
             <version>${gwtversion}</version>
             <type>jar</type>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
 
     </dependencies>
@@ -75,7 +75,7 @@
                 <jdk>1</jdk>
             </activation>
             <properties>
-		<gwtversion>1.4.10</gwtversion>
+		<gwtversion>1.4.61timepedia</gwtversion>
             </properties>
 	</profile>
         <profile>
