git-svn-id: https://gwt-exporter.googlecode.com/svn/trunk@8 efcdc456-a631-0410-84da-075f59a3872b

--- a/pom.xml
+++ b/pom.xml
@@ -1,117 +1,118 @@
-   <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>org.timepedia.exporter</groupId>
-    <artifactId>gwtexporter</artifactId>
-    <packaging>jar</packaging>
-    <version>2.0-alpha</version>
-    <name>GWT Javascript API Exporter</name>
-    <url>http://timepedia.org</url>
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
-        </dependency>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>org.timepedia.exporter</groupId>
+  <artifactId>gwtexporter</artifactId>
+  <packaging>jar</packaging>
+  <version>2.0-alpha</version>
+  <name>GWT Javascript API Exporter</name>
+  <url>http://timepedia.org</url>
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
+    </dependency>
 
-        <dependency>
-            <groupId>com.google.gwt</groupId>
-            <artifactId>gwt-user</artifactId>
-            <version>${gwtversion}</version>
-            <type>jar</type>
-            <scope>provided</scope>
-        </dependency>
+    <dependency>
+      <groupId>com.google.gwt</groupId>
+      <artifactId>gwt-user</artifactId>
+      <version>${gwtversion}</version>
+      <type>jar</type>
+      <scope>provided</scope>
+    </dependency>
 
 
-        <dependency>
-            <groupId>com.google.gwt</groupId>
-            <artifactId>gwt-dev-${gwtplatform}</artifactId>
-            <version>${gwtversion}</version>
-            <type>jar</type>
-            <scope>provided</scope>
-        </dependency>
+    <dependency>
+      <groupId>com.google.gwt</groupId>
+      <artifactId>gwt-dev-${gwtplatform}</artifactId>
+      <version>${gwtversion}</version>
+      <type>jar</type>
+      <scope>provided</scope>
+    </dependency>
 
-    </dependencies>
-    <build>
-        <finalName>gwtexporter2alpha</finalName>
-        <resources>
-            <resource>
-                <directory>${basedir}/src/main/java</directory>
-            </resource>
-            <resource>
-                <directory>${basedir}/src/main/resources</directory>
-            </resource>
-        </resources>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
-                </configuration>
-            </plugin>
-        </plugins>
+  </dependencies>
+  <build>
+    <finalName>gwtexporter2alpha</finalName>
+    <resources>
+      <resource>
+        <directory>${basedir}/src/main/java</directory>
+      </resource>
+      <resource>
+        <directory>${basedir}/src/main/resources</directory>
+      </resource>
+    </resources>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.5</source>
+          <target>1.5</target>
+        </configuration>
+      </plugin>
+    </plugins>
 
-    </build>
-    <pluginRepositories>
-        <pluginRepository>
-            <id>gwt-maven</id>
-            <url>http://gwt-maven.googlecode.com/svn/trunk/mavenrepo/</url>
-        </pluginRepository>
-    </pluginRepositories>
+  </build>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>gwt-maven</id>
+      <url>http://gwt-maven.googlecode.com/svn/trunk/mavenrepo/</url>
+    </pluginRepository>
+  </pluginRepositories>
 
-    <repositories>
-        <repository>
-            <id>gwt-maven</id>
-            <url>http://gwt-maven.googlecode.com/svn/trunk/mavenrepo/</url>
-        </repository>
-    </repositories>
-    <profiles>
-        <profile>
-	    <id>gwt</id>
-            <activation>
-                <jdk>1</jdk>
-            </activation>
-            <properties>
-		<gwtversion>1.5.0-rc1</gwtversion>
-            </properties>
-	</profile>
-        <profile>
-            <id>gwt-windows</id>
-            <activation>
-             <os>
-               <family>Windows</family>
-            </os>
-            </activation>
-            <properties>
-		<gwtplatform>windows</gwtplatform>
-            </properties>
-        </profile>
+  <repositories>
+    <repository>
+      <id>gwt-maven</id>
+      <url>http://gwt-maven.googlecode.com/svn/trunk/mavenrepo/</url>
+    </repository>
+  </repositories>
+  <profiles>
+    <profile>
+      <id>gwt</id>
+      <activation>
+        <jdk>1</jdk>
+      </activation>
+      <properties>
+        <gwtversion>1.5.0-rc1</gwtversion>
+      </properties>
+    </profile>
+    <profile>
+      <id>gwt-windows</id>
+      <activation>
+        <os>
+          <family>Windows</family>
+        </os>
+      </activation>
+      <properties>
+        <gwtplatform>windows</gwtplatform>
+      </properties>
+    </profile>
 
-        <profile>
-            <id>gwt-mac</id>
-            <activation>
-             <os>
-               <name>Mac OS X</name>
-            </os>
-            </activation>
-            <properties>
-		<gwtplatform>mac</gwtplatform>
-            </properties>
-        </profile>
-        <profile>
-            <id>gwt-linux</id>
-            <activation>
-             <os>
-               <name>linux</name>
-            </os>
-            </activation>
-            <properties>
-		<gwtplatform>linux</gwtplatform>
-            </properties>
-        </profile>
-    </profiles>
+    <profile>
+      <id>gwt-mac</id>
+      <activation>
+        <os>
+          <name>Mac OS X</name>
+        </os>
+      </activation>
+      <properties>
+        <gwtplatform>mac</gwtplatform>
+      </properties>
+    </profile>
+    <profile>
+      <id>gwt-linux</id>
+      <activation>
+        <os>
+          <name>linux</name>
+        </os>
+      </activation>
+      <properties>
+        <gwtplatform>linux</gwtplatform>
+      </properties>
+    </profile>
+  </profiles>
 
 </project>
