--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,6 @@
       <groupId>com.google.gwt</groupId>
       <artifactId>gwt-user</artifactId>
       <version>${gwtversion}</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.google.gwt</groupId>
@@ -38,6 +37,14 @@
       <scope>provided</scope>
     </dependency>
   </dependencies>
+
+   <distributionManagement>
+    <repository>
+      <uniqueVersion>false</uniqueVersion>
+            <id>timepedia-deploy</id>
+            <url>svn:https://gwt-chronoscope.googlecode.com/svn/mavenrepo/</url>
+    </repository>
+  </distributionManagement>
   <build>
     <resources>
       <resource>
@@ -57,7 +64,13 @@
         </configuration>
       </plugin>
     </plugins>
-
+    <extensions>
+      <extension>
+        <groupId>org.jvnet.wagon-svn</groupId>
+        <artifactId>wagon-svn</artifactId>
+        <version>1.8</version>
+      </extension>
+    </extensions>
   </build>
   <pluginRepositories>
     <pluginRepository>
@@ -65,11 +78,15 @@
       <url>http://gwt-maven.googlecode.com/svn/trunk/mavenrepo/</url>
     </pluginRepository>
   </pluginRepositories>
-c
   <repositories>
     <repository>
       <id>gwt-maven</id>
       <url>http://gwt-maven.googlecode.com/svn/trunk/mavenrepo/</url>
+    </repository>
+    <repository>
+      <id>maven2-repository.dev.java.net</id>
+      <name>Java.net Repository for Maven</name>
+      <url>http://download.java.net/maven/2/</url>
     </repository>
   </repositories>
   <profiles>
