--- a/pom.xml
+++ b/pom.xml
@@ -1,138 +1,139 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.timepedia.exporter</groupId>
-  <artifactId>gwtexporter</artifactId>
-  <packaging>jar</packaging>
-  <version>2.03</version>
-  <name>GWT Javascript API Exporter</name>
-  <url>http://timepedia.org</url>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>org.timepedia.exporter</groupId>
+    <artifactId>gwtexporter</artifactId>
+    <packaging>jar</packaging>
+    <version>2.04</version>
+    <name>GWT Javascript API Exporter</name>
+    <url>http://timepedia.org</url>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
 
-    <dependency>
-      <groupId>com.google.gwt</groupId>
-      <artifactId>gwt-user</artifactId>
-      <version>${gwtversion}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.gwt</groupId>
-      <artifactId>gwt-dev</artifactId>
-      <version>${gwtversion}</version>
-      <classifier>${gwtplatform}-libs</classifier>
-      <type>zip</type>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.google.gwt</groupId>
-      <artifactId>gwt-dev</artifactId>
-      <version>${gwtversion}</version>
-      <classifier>${gwtplatform}</classifier>
-      <scope>provided</scope>
-    </dependency>
-  </dependencies>
+        <dependency>
+            <groupId>com.google.gwt</groupId>
+            <artifactId>gwt-user</artifactId>
+            <version>${gwtversion}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.gwt</groupId>
+            <artifactId>gwt-dev</artifactId>
+            <version>${gwtversion}</version>
+            <classifier>${gwtplatform}-libs</classifier>
+            <type>zip</type>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.gwt</groupId>
+            <artifactId>gwt-dev</artifactId>
+            <version>${gwtversion}</version>
+            <classifier>${gwtplatform}</classifier>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
-   <distributionManagement>
-    <repository>
-      <uniqueVersion>false</uniqueVersion>
+    <distributionManagement>
+        <repository>
+            <uniqueVersion>false</uniqueVersion>
             <id>timepedia-deploy</id>
-            <url>svn:https://gwt-chronoscope.googlecode.com/svn/mavenrepo/</url>
-    </repository>
-  </distributionManagement>
-  <build>
-    <resources>
-      <resource>
-        <directory>${basedir}/src/main/java</directory>
-      </resource>
-      <resource>
-        <directory>${basedir}/src/main/resources</directory>
-      </resource>
-    </resources>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>1.5</source>
-          <target>1.5</target>
-        </configuration>
-      </plugin>
-    </plugins>
-    <extensions>
-      <extension>
-        <groupId>org.jvnet.wagon-svn</groupId>
-        <artifactId>wagon-svn</artifactId>
-        <version>1.8</version>
-      </extension>
-    </extensions>
-  </build>
-  <pluginRepositories>
-    <pluginRepository>
-      <id>gwt-maven</id>
-      <url>http://gwt-maven.googlecode.com/svn/trunk/mavenrepo/</url>
-    </pluginRepository>
-  </pluginRepositories>
-  <repositories>
-    <repository>
-      <id>gwt-maven</id>
-      <url>http://gwt-maven.googlecode.com/svn/trunk/mavenrepo/</url>
-    </repository>
-    <repository>
-      <id>maven2-repository.dev.java.net</id>
-      <name>Java.net Repository for Maven</name>
-      <url>http://download.java.net/maven/2/</url>
-    </repository>
-  </repositories>
-  <profiles>
-    <profile>
-      <id>gwt</id>
-      <activation>
-        <jdk>1</jdk>
-      </activation>
-      <properties>
-        <gwtversion>1.5.2</gwtversion>
-      </properties>
-    </profile>
-    <profile>
-      <id>gwt-windows</id>
-      <activation>
-        <os>
-          <family>Windows</family>
-        </os>
-      </activation>
-      <properties>
-        <gwtplatform>windows</gwtplatform>
-      </properties>
-    </profile>
+            <url>svn:https://timefire-repository.googlecode.com/svn/mavenrepo/
+            </url>
+        </repository>
+    </distributionManagement>
+    <build>
+        <resources>
+            <resource>
+                <directory>${basedir}/src/main/java</directory>
+            </resource>
+            <resource>
+                <directory>${basedir}/src/main/resources</directory>
+            </resource>
+        </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.5</source>
+                    <target>1.5</target>
+                </configuration>
+            </plugin>
+        </plugins>
+        <extensions>
+            <extension>
+                <groupId>org.jvnet.wagon-svn</groupId>
+                <artifactId>wagon-svn</artifactId>
+                <version>1.8</version>
+            </extension>
+        </extensions>
+    </build>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>gwt-maven</id>
+            <url>http://gwt-maven.googlecode.com/svn/trunk/mavenrepo/</url>
+        </pluginRepository>
+    </pluginRepositories>
+    <repositories>
+        <repository>
+            <id>gwt-maven</id>
+            <url>http://gwt-maven.googlecode.com/svn/trunk/mavenrepo/</url>
+        </repository>
+        <repository>
+            <id>maven2-repository.dev.java.net</id>
+            <name>Java.net Repository for Maven</name>
+            <url>http://download.java.net/maven/2/</url>
+        </repository>
+    </repositories>
+    <profiles>
+        <profile>
+            <id>gwt</id>
+            <activation>
+                <jdk>1</jdk>
+            </activation>
+            <properties>
+                <gwtversion>1.5.2</gwtversion>
+            </properties>
+        </profile>
+        <profile>
+            <id>gwt-windows</id>
+            <activation>
+                <os>
+                    <family>Windows</family>
+                </os>
+            </activation>
+            <properties>
+                <gwtplatform>windows</gwtplatform>
+            </properties>
+        </profile>
 
-    <profile>
-      <id>gwt-mac</id>
-      <activation>
-        <os>
-          <name>Mac OS X</name>
-        </os>
-      </activation>
-      <properties>
-        <gwtplatform>mac</gwtplatform>
-      </properties>
-    </profile>
-    <profile>
-      <id>gwt-linux</id>
-      <activation>
-        <os>
-          <name>linux</name>
-        </os>
-      </activation>
-      <properties>
-        <gwtplatform>linux</gwtplatform>
-      </properties>
-    </profile>
-  </profiles>
+        <profile>
+            <id>gwt-mac</id>
+            <activation>
+                <os>
+                    <name>Mac OS X</name>
+                </os>
+            </activation>
+            <properties>
+                <gwtplatform>mac</gwtplatform>
+            </properties>
+        </profile>
+        <profile>
+            <id>gwt-linux</id>
+            <activation>
+                <os>
+                    <name>linux</name>
+                </os>
+            </activation>
+            <properties>
+                <gwtplatform>linux</gwtplatform>
+            </properties>
+        </profile>
+    </profiles>
 
 </project>
