--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>org.timepedia.exporter</groupId>
     <artifactId>gwtexporter</artifactId>
     <packaging>jar</packaging>
-    <version>2.06</version>
+    <version>2.07</version>
     <name>GWT Javascript API Exporter</name>
     <url>http://timepedia.org</url>
     <dependencies>
@@ -25,15 +25,6 @@
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-dev</artifactId>
             <version>${gwtversion}</version>
-            <classifier>${gwtplatform}-libs</classifier>
-            <type>zip</type>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.google.gwt</groupId>
-            <artifactId>gwt-dev</artifactId>
-            <version>${gwtversion}</version>
-            <classifier>${gwtplatform}</classifier>
             <scope>provided</scope>
         </dependency>
 
@@ -110,7 +101,7 @@
                 <jdk>1</jdk>
             </activation>
             <properties>
-                <gwtversion>1.5.2</gwtversion>
+                <gwtversion>[1.5.2,]</gwtversion>
             </properties>
         </profile>
         <profile>
