--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>org.timepedia.exporter</groupId>
     <artifactId>gwtexporter</artifactId>
     <packaging>jar</packaging>
-    <version>2.07</version>
+    <version>2.09</version>
     <name>GWT Javascript API Exporter</name>
     <url>http://timepedia.org</url>
     <dependencies>
@@ -19,12 +19,12 @@
         <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-user</artifactId>
-            <version>${gwtversion}</version>
+            <version>[2.0.0-rc2,)</version>
         </dependency>
         <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-dev</artifactId>
-            <version>${gwtversion}</version>
+            <version>[2.0.0-rc2,)</version>
             <scope>provided</scope>
         </dependency>
 
@@ -38,6 +38,7 @@
             </url>
         </repository>
     </distributionManagement>
+
     <build>
         <resources>
             <resource>
@@ -93,51 +94,12 @@
             <name>Java.net Repository for Maven</name>
             <url>http://download.java.net/maven/2/</url>
         </repository>
-    </repositories>
-    <profiles>
-        <profile>
-            <id>gwt</id>
-            <activation>
-                <jdk>1</jdk>
-            </activation>
-            <properties>
-                <gwtversion>[1.5.2,]</gwtversion>
-            </properties>
-        </profile>
-        <profile>
-            <id>gwt-windows</id>
-            <activation>
-                <os>
-                    <family>Windows</family>
-                </os>
-            </activation>
-            <properties>
-                <gwtplatform>windows</gwtplatform>
-            </properties>
-        </profile>
+        <repository>
+            <id>timefire</id>
+            <url>http://timefire-repository.googlecode.com/svn/mavenrepo/</url>
+        </repository>
 
-        <profile>
-            <id>gwt-mac</id>
-            <activation>
-                <os>
-                    <name>Mac OS X</name>
-                </os>
-            </activation>
-            <properties>
-                <gwtplatform>mac</gwtplatform>
-            </properties>
-        </profile>
-        <profile>
-            <id>gwt-linux</id>
-            <activation>
-                <os>
-                    <name>linux</name>
-                </os>
-            </activation>
-            <properties>
-                <gwtplatform>linux</gwtplatform>
-            </properties>
-        </profile>
-    </profiles>
+    </repositories>
+  
 
 </project>
