--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>org.timepedia.exporter</groupId>
     <artifactId>gwtexporter</artifactId>
     <packaging>jar</packaging>
-    <version>2.09</version>
+    <version>2.0.10</version>
     <name>GWT Javascript API Exporter</name>
     <url>http://timepedia.org</url>
     <dependencies>
@@ -19,12 +19,12 @@
         <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-user</artifactId>
-            <version>[2.0.0-rc2,)</version>
+            <version>[2.0.0,)</version>
         </dependency>
         <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-dev</artifactId>
-            <version>[2.0.0-rc2,)</version>
+            <version>[2.0.0,)</version>
             <scope>provided</scope>
         </dependency>
 
