--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,9 @@
     <version>2.0.10</version>
     <name>GWT Javascript API Exporter</name>
     <url>http://timepedia.org</url>
+    <properties>
+     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -15,7 +18,6 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-user</artifactId>
@@ -27,7 +29,14 @@
             <version>[2.0.0,)</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+          <groupId>com.sun</groupId>
+          <artifactId>tools</artifactId>
+          <version>1.6</version>
+          <scope>system</scope>
+          <optional>true</optional>
+          <systemPath>${java.home}/../lib/tools.jar</systemPath>
+        </dependency>
     </dependencies>
 
     <distributionManagement>
