--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,16 @@
     <groupId>org.timepedia.exporter</groupId>
     <artifactId>gwtexporter</artifactId>
     <packaging>jar</packaging>
-    <version>2.0.10</version>
+    <version>2.10.0-SNAPSHOT</version>
     <name>GWT Javascript API Exporter</name>
     <url>http://timepedia.org</url>
+
+    <parent>
+      <groupId>org.sonatype.oss</groupId>
+      <artifactId>oss-parent</artifactId>
+      <version>3</version>
+    </parent>
+
     <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -21,12 +28,13 @@
         <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-user</artifactId>
-            <version>[2.0.0,)</version>
+            <version>2.1.0</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-dev</artifactId>
-            <version>[2.0.0,)</version>
+            <version>2.1.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -38,15 +46,6 @@
           <systemPath>${java.home}/../lib/tools.jar</systemPath>
         </dependency>
     </dependencies>
-
-    <distributionManagement>
-        <repository>
-            <uniqueVersion>false</uniqueVersion>
-            <id>timepedia-deploy</id>
-            <url>svn:https://timefire-repository.googlecode.com/svn/mavenrepo/
-            </url>
-        </repository>
-    </distributionManagement>
 
     <build>
         <resources>
