--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -4,7 +4,7 @@
   <groupId>org.timepedia.exporter</groupId>
   <artifactId>gwtexporter-demo</artifactId>
   <packaging>war</packaging>
-  <version>2.1.1</version>
+  <version>2.3.0</version>
 
   <build>
     <outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</outputDirectory>
@@ -142,6 +142,20 @@
       <optional>true</optional>
       <systemPath>${java.home}/../lib/tools.jar</systemPath>
     </dependency>
+    <!-- gwt-2.3.0 needs these -->
+    <dependency> 
+      <groupId>javax.validation</groupId> 
+      <artifactId>validation-api</artifactId> 
+      <version>1.0.0.GA</version> 
+      <scope>provided</scope> 
+    </dependency> 
+    <dependency> 
+      <groupId>javax.validation</groupId> 
+      <artifactId>validation-api</artifactId> 
+      <version>1.0.0.GA</version> 
+      <classifier>sources</classifier> 
+      <scope>provided</scope> 
+    </dependency> 
   </dependencies>
   
 </project>
