--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -117,6 +117,12 @@
 
   <dependencies>
     <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>3.8.1</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.timepedia.exporter</groupId>
       <artifactId>gwtexporter</artifactId>
       <version>${version}</version>
