--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>org.timepedia.exporter</groupId>
     <artifactId>gwtexporter</artifactId>
     <packaging>jar</packaging>
-    <version>2.3.0</version>
+    <version>2.3.1-SNAPSHOT</version>
     <name>GWT Javascript API Exporter</name>
     <url>http://timepedia.org</url>
 
@@ -17,6 +17,7 @@
 
     <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+     <gwtversion>2.3.0</gwtversion>
     </properties>
     <dependencies>
         <dependency>
@@ -28,13 +29,13 @@
         <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-user</artifactId>
-            <version>${version}</version>
+            <version>${gwtversion}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-dev</artifactId>
-            <version>${version}</version>
+            <version>${gwtversion}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
