--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -4,7 +4,7 @@
   <groupId>org.timepedia.exporter</groupId>
   <artifactId>gwtexporter-demo</artifactId>
   <packaging>war</packaging>
-  <version>2.3.0</version>
+  <version>2.3.1-SNAPSHOT</version>
 
   <build>
     <outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</outputDirectory>
@@ -84,8 +84,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <gwtversion>${version}</gwtversion>
-    <gwtmaven>2.1.0-1</gwtmaven>
+    <gwtversion>2.3.0</gwtversion>
+    <gwtmaven>2.3.0</gwtmaven>
     <gwt.loglevel>INFO</gwt.loglevel>
     <gwt.outputstyle>PRETTY</gwt.outputstyle>
     <gwt.modulesuffix />
