Order classes in exportAll (closures, overlays, exportable). Support for exporting closures with multiple methods. Fix return wrapped type in overloaded methods. Check that constructors are not null when wrapping types.
git-svn-id: https://gwt-exporter.googlecode.com/svn/trunk@65 efcdc456-a631-0410-84da-075f59a3872b

--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -25,6 +25,10 @@
             <localWorkers>${gwt.workers}</localWorkers>
             <extraJvmArgs>-Xmx256m</extraJvmArgs>
             <inplace>${gwt.inplace}</inplace>
+            <modules>
+              <module>exporterdemo.ExporterDemo</module>
+              <module>simpledemo.SimpleDemo</module>
+            </modules>
           </configuration>
           <executions>
             <execution>
