Adding ExportJsInitMethod annotation, needed for GQuery
git-svn-id: https://gwt-exporter.googlecode.com/svn/trunk@85 efcdc456-a631-0410-84da-075f59a3872b

--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -15,7 +15,7 @@
           <version>${gwtmaven}</version>
           <configuration>
             <logLevel>${gwt.loglevel}</logLevel>
-            <style>${gwt.outputstyle}</style>
+            <style>PRETTY</style>
             <runTarget>${gwt.target}</runTarget>
             <hostedWebapp>${project.build.directory}/www</hostedWebapp>
             <draftCompile>${gwt.draft}</draftCompile>
@@ -26,7 +26,7 @@
             <extraJvmArgs>-Xmx256m</extraJvmArgs>
             <inplace>${gwt.inplace}</inplace>
             <modules>
-              <module>exporterdemo.ExporterDemo</module>
+              <!--<module>exporterdemo.ExporterDemo</module>-->
               <module>simpledemo.SimpleDemo</module>
             </modules>
           </configuration>
