--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -4,7 +4,7 @@
   <groupId>org.timepedia.exporter</groupId>
   <artifactId>gwtexporter-demo</artifactId>
   <packaging>war</packaging>
-  <version>2.3.1-SNAPSHOT</version>
+  <version>2.4.0-SNAPSHOT</version>
 
   <build>
     <outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</outputDirectory>
@@ -26,7 +26,7 @@
             <extraJvmArgs>-Xmx256m</extraJvmArgs>
             <inplace>${gwt.inplace}</inplace>
             <modules>
-              <!--<module>exporterdemo.ExporterDemo</module>-->
+              <module>exporterdemo.ExporterDemo</module>
               <module>simpledemo.SimpleDemo</module>
             </modules>
           </configuration>
@@ -39,6 +39,19 @@
             </execution>
           </executions>
         </plugin>
+		<plugin>
+		  <groupId>org.apache.maven.plugins</groupId>
+		  <artifactId>maven-surefire-plugin</artifactId>
+		  <configuration>
+		     <additionalClasspathElements>
+		       <additionalClasspathElement>${basedir}/src/main/java</additionalClasspathElement>
+		       <additionalClasspathElement>${basedir}/src/test/java</additionalClasspathElement>
+		     </additionalClasspathElements>
+             <!-- <useManifestOnlyJar>false</useManifestOnlyJar> -->
+             <!-- <forkMode>always</forkMode> -->
+		     <useSystemClassLoader>false</useSystemClassLoader>
+		  </configuration>
+		</plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -142,7 +155,7 @@
       <groupId>com.google.gwt</groupId>
       <artifactId>gwt-dev</artifactId>
       <version>${gwtversion}</version>
-      <scope>provided</scope>
+      <scope>test</scope>
     </dependency>    
 
     <dependency>
