fix isArray check in jsni
git-svn-id: https://gwt-exporter.googlecode.com/svn/trunk@99 efcdc456-a631-0410-84da-075f59a3872b

--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -90,6 +90,12 @@
       <url>http://download.java.net/maven/2/</url>
     </repository>
     <repository>
+        <id>sonatype-snapshot</id>
+        <url>http://oss.sonatype.org/content/repositories/snapshots</url>
+        <snapshots><enabled>true</enabled></snapshots>
+        <releases><enabled>false</enabled></releases>
+    </repository>
+    <repository>
       <id>timepedia</id>
       <url>http://gwt-chronoscope.googlecode.com/svn/mavenrepo/</url>
     </repository>
