--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,21 @@
                     <target>1.6</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                   <additionalClasspathElements>
+                     <additionalClasspathElement>${basedir}/src/main/java</additionalClasspathElement>
+                     <additionalClasspathElement>${basedir}/src/test/java</additionalClasspathElement>
+                     </additionalClasspathElements>
+             <!-- <useManifestOnlyJar>false</useManifestOnlyJar> -->
+             <!-- <forkMode>always</forkMode> -->
+                     <useSystemClassLoader>false</useSystemClassLoader>
+                </configuration>
+            </plugin>
         </plugins>
+
         <extensions>
             <extension>
                 <groupId>org.jvnet.wagon-svn</groupId>
