--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>org.timepedia.exporter</groupId>
     <artifactId>gwtexporter</artifactId>
     <packaging>jar</packaging>
-    <version>2.4.0-SNAPSHOT</version>
+    <version>2.4.0-M1</version>
     <name>GWT Javascript API Exporter</name>
     <url>http://timepedia.org</url>
 
@@ -89,6 +89,9 @@
              <!-- <useManifestOnlyJar>false</useManifestOnlyJar> -->
              <!-- <forkMode>always</forkMode> -->
                      <useSystemClassLoader>false</useSystemClassLoader>
+                     <systemPropertyVariables>
+                      <gwt.args>-runStyle  HtmlUnit:FF3,IE6</gwt.args>
+                     </systemPropertyVariables>
                 </configuration>
             </plugin>
         </plugins>
