--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>org.timepedia.exporter</groupId>
     <artifactId>gwtexporter</artifactId>
     <packaging>jar</packaging>
-    <version>2.4.0-M1</version>
+    <version>2.4.0-SNAPSHOT</version>
     <name>GWT Javascript API Exporter</name>
     <url>http://timepedia.org</url>
 
