--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.timepedia.exporter</groupId>
     <artifactId>gwtexporter</artifactId>
     <packaging>jar</packaging>
-    <version>2.4.0-SNAPSHOT</version>
+    <version>2.4.0-M1</version>
     <name>GWT Javascript API Exporter</name>
     <url>http://timepedia.org</url>
 
@@ -125,4 +123,10 @@
             <url>http://timefire-repository.googlecode.com/svn/mavenrepo/</url>
         </repository>
     </repositories>
+
+  <scm>
+    <connection>scm:svn:http://svn.sonatype.org/spice/tags/gwtexporter-2.4.0-M1</connection>
+    <developerConnection>scm:svn:https://svn.sonatype.org/spice/tags/gwtexporter-2.4.0-M1</developerConnection>
+    <url>http://svn.sonatype.org/spice/tags/gwtexporter-2.4.0-M1</url>
+  </scm>
 </project>
