--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,14 @@
     <groupId>org.timepedia.exporter</groupId>
     <artifactId>gwtexporter</artifactId>
     <packaging>jar</packaging>
-    <version>2.4.0-M1</version>
+    <version>2.4.0-SNAPSHOT</version>
     <name>GWT Javascript API Exporter</name>
     <url>http://timepedia.org</url>
 
     <parent>
       <groupId>org.sonatype.oss</groupId>
       <artifactId>oss-parent</artifactId>
-      <version>3</version>
+      <version>7</version>
     </parent>
 
     <properties>
@@ -124,9 +124,4 @@
         </repository>
     </repositories>
 
-  <scm>
-    <connection>scm:svn:http://svn.sonatype.org/spice/tags/gwtexporter-2.4.0-M1</connection>
-    <developerConnection>scm:svn:https://svn.sonatype.org/spice/tags/gwtexporter-2.4.0-M1</developerConnection>
-    <url>http://svn.sonatype.org/spice/tags/gwtexporter-2.4.0-M1</url>
-  </scm>
 </project>
