--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>org.timepedia.exporter</groupId>
     <artifactId>gwtexporter</artifactId>
     <packaging>jar</packaging>
-    <version>2.4.0-M1</version>
+    <version>2.4.0-SNAPSHOT</version>
     <name>GWT Javascript API Exporter</name>
     <url>http://timepedia.org</url>
 
@@ -124,10 +124,10 @@
         </repository>
     </repositories>
 
-
   <scm>
-    <connection>scm:svn:http://svn.sonatype.org/spice/tags/gwtexporter-2.4.0-M1</connection>
-    <developerConnection>scm:svn:https://svn.sonatype.org/spice/tags/gwtexporter-2.4.0-M1</developerConnection>
-    <url>http://svn.sonatype.org/spice/tags/gwtexporter-2.4.0-M1</url>
+    <connection>scm:svn:http://gwt-exporter.googlecode.com/svn/trunk</connection>
+    <developerConnection>scm:svn:https://gwt-exporter.googlecode.com/svn/trunk</developerConnection>
+    <url>http://code.google.com/p/gwt-exporter/source/browse/</url>
   </scm>
+
 </project>
