--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>org.timepedia.exporter</groupId>
     <artifactId>gwtexporter</artifactId>
     <packaging>jar</packaging>
-    <version>2.4.0</version>
+    <version>2.5.0-SNAPSHOT</version>
     <name>GWT Javascript API Exporter</name>
     <url>http://timepedia.org</url>
 
@@ -14,8 +14,8 @@
     </parent>
 
     <properties>
-     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-     <gwtversion>2.4.0</gwtversion>
+      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <gwtversion>2.4.0</gwtversion>
     </properties>
     <dependencies>
         <dependency>
