--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -94,8 +94,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <gwtversion>2.4.0</gwtversion>
-    <gwtmaven>2.4.0</gwtmaven>
+    <gwtversion>2.5.0-rc1</gwtversion>
+    <gwtmaven>2.5.0-rc1</gwtmaven>
     <gwt.loglevel>INFO</gwt.loglevel>
     <gwt.outputstyle>PRETTY</gwt.outputstyle>
     <gwt.modulesuffix />
