--- a/samples/export-widgets/pom.xml
+++ b/samples/export-widgets/pom.xml
@@ -15,7 +15,7 @@
       <gQueryVersion>1.3.1</gQueryVersion>
       <gExporterVersion>2.5.0-SNAPSHOT</gExporterVersion>
       <gwtversion>2.5.1-rc1</gwtversion>
-      <gwtmaven>2.5.0</gwtmaven>
+      <gwtmaven>2.5.1-rc1</gwtmaven>
     </properties>
 
     <repositories>
