--- a/samples/exporterdemo/pom.xml
+++ b/samples/exporterdemo/pom.xml
@@ -94,7 +94,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <gwtversion>2.5.1-rc1</gwtversion>
-    <gwtmaven>2.5.0</gwtmaven>
+    <gwtmaven>2.5.1-rc1</gwtmaven>
     <gwt.loglevel>INFO</gwt.loglevel>
     <gwt.outputstyle>PRETTY</gwt.outputstyle>
     <gwt.modulesuffix />
