--- a/core/pom.xml
+++ b/core/pom.xml
@@ -3,7 +3,7 @@
     <groupId>org.timepedia.exporter</groupId>
     <artifactId>gwtexporter</artifactId>
     <packaging>jar</packaging>
-    <version>2.5.0-SNAPSHOT</version>
+    <version>2.6.0-SNAPSHOT</version>
     <name>GWT Javascript API Exporter</name>
     <url>http://timepedia.org</url>
 
@@ -117,6 +117,22 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+             <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-release-plugin</artifactId>
+              <version>2.3.2</version>
+              <executions>
+                  <execution>
+                      <id>default</id>
+                      <goals>
+                          <goal>perform</goal>
+                      </goals>
+                      <configuration>
+                          <pomFileName>core/pom.xml</pomFileName>
+                      </configuration>
+                  </execution>
+              </executions>
             </plugin>
         </plugins>
 
