--- a/core/pom.xml
+++ b/core/pom.xml
@@ -3,7 +3,7 @@
     <groupId>org.timepedia.exporter</groupId>
     <artifactId>gwtexporter</artifactId>
     <packaging>jar</packaging>
-    <version>2.6.0-SNAPSHOT</version>
+    <version>2.5.0-SNAPSHOT</version>
     <name>GWT Javascript API Exporter</name>
     <url>http://timepedia.org</url>
 
@@ -153,5 +153,6 @@
     <connection>scm:git:https://code.google.com/p/gwt-exporter/</connection>
     <developerConnection>scm:git:git@github.com:manolo/gwt-exporter.git</developerConnection>
     <url>http://code.google.com/p/gwt-exporter/source/browse/</url>
+    <tag>gwtexporter-2.6.1</tag>
   </scm>
 </project>
